--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,24 @@
 .env.development.local
 .env.test.local
 .env.production.local
+*.pem
 
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+
+# history
+/.history/
