--- a/package.json
+++ b/package.json
@@ -1,18 +1,36 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "homepage": "https://MarioPayan.github.io/portfolio2",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.21",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/lab": "^5.0.0-alpha.62",
+    "@mui/material": "^5.2.6",
+    "i18next": "^21.6.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.3",
+    "react-intersection-observer": "^8.33.1",
     "react-scripts": "5.0.0",
+    "react-tsparticles": "^1.38.0"
+  },
+  "devDependencies": {
+    "@babel/preset-react": "^7.16.7",
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/node": "17.0.6",
+    "@types/react": "17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.8.1",
+    "@typescript-eslint/parser": "^5.8.1",
+    "babel-plugin-typescript-to-proptypes": "^2.0.0",
+    "eslint": "^8.6.0",
+    "eslint-config-next": "12.0.7",
+    "eslint-plugin-react": "^7.28.0",
+    "gh-pages": "^3.2.3",
+    "prettier": "^2.5.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.3"
   },
@@ -20,7 +38,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "npm run prettier && npm run eslint-fix 2>/dev/null && next lint",
+    "eslint": "node ./node_modules/eslint/bin/eslint.js . --ext .js,.jsx,.ts,.tsx --color",
+    "eslint-fix": "node ./node_modules/eslint/bin/eslint.js --ext .js,.jsx,.ts,.tsx . --fix",
+    "prettier": "prettier --write **/*.{ts,tsx,scss,css,json}",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
